@@ -1,3 +1,3 @@
 module MotionModel
-  VERSION = "0.3.1"
+  VERSION = "0.3.2"
 end
