@@ -1,3 +1,7 @@
+2012-12-30: Added Formotion module. This allows for tighter integration with Formotion
+            Changed options for columns such that any arbitrary values can be inserted
+            allowing for future expansion.
+
 2012-12-14: Added lots of framework to validations
             Added validations for length, format, email, presence
             Added array type (thanks justinmcp)
